# icub-main

app/joystickCtrl/conf/: ikart_digital.ini  ikart_metric_control.ini
src/libraries/: CMakeLists.txt
src/libraries/R1ModelLib/include/: R1Model.h
src/libraries/R1ModelLib/src/: R1Model.cpp  R1Model.cpp.bak
src/libraries/RobotModelLib/include/: Covers.h  Geometry.h  Joints.h  Matrix.h  RobotModel.h
src/libraries/RobotModelLib/src/: Joints.cpp  RobotModel.cpp
src/libraries/iCubModelLib/: CMakeLists.txt
src/libraries/iCubModelLib/include/: iCubModel.h
src/libraries/iCubModelLib/src/: iCubModel.cpp
src/libraries/icubmod/: CMakeLists.txt
src/libraries/icubmod/embObjLib/: CMakeLists.txt
src/libraries/icubmod/embObjMotionControl/: CMakeLists.txt  embObjMotionControl.cpp  embObjMotionControl.h  embot_tools.cpp  embot_tools.h
src/libraries/icubmod/safeMotionControl/: CMakeLists.txt  RobotDriver.cpp  RobotDriver.h  safeMotionControl.cpp  safeMotionControl.h  safeMotionControl.ini
src/tools/: CMakeLists.txt
src/tools/canLoader/canLoaderLib/: downloader.cpp
src/tools/joystickCtrl/: main.cpp
